syntax = "proto3";
package rencfs_daemon;

service DaemonService {
  rpc Echo(EmptyRequest) returns (EmptyReply);

  rpc Lock (IdRequest) returns (EmptyReply);
  rpc Unlock (IdRequest) returns (EmptyReply);

  // request contains old mount_point and new mount_point
  rpc ChangeMountPoint (StringsIdRequest) returns (EmptyReply);
  // request contains old data_dir and new data_dir
  rpc ChangeDataDir (StringsIdRequest) returns (EmptyReply);

  rpc Remove (IdRequest) returns (EmptyReply);
  rpc Insert (InsertRequest) returns (EmptyReply);
}

message IdRequest {
  string id = 1;
}

message StringsIdRequest {
  string id = 1;
  repeated string value = 2;
}

message EmptyRequest {
}

message EmptyReply {
}

message InsertRequest {
  uint32 id = 1;
  string name = 2;
  string mount_point = 3;
  string data_dir = 4;
  string cipher = 5;
  uint32 derive_key_hash_rounds = 6;
}